# libcdhit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/libcdhit/: cdhit-common.h  cdhit.h  input_sequence.h
kernels/: Makefile  build_word_table.cpp  build_word_table_mt.cpp  diag_test.cpp  search_word_table_mt.cpp  search_word_table_mt_dsu.cpp  search_word_table_mt_pdsu.cpp  search_word_table_mt_pdsu_up.cpp  search_word_table_mt_up.cpp  search_word_table_mt_wminhash.cpp  test2.fa  test3.fa
src/: cdhit-common.cpp  cluster.cpp  cluster.h  input_sequence.h  ips2ra.cpp  ips4o.cpp  libcdhit.cpp  main.cpp  protein_cluster_lib.cpp
tests/: test.cpp  test_cc.cpp
